--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 
 <body>
 
+
+
   <header class="bg-dark text-white text-center py-4" style="background: url('img/halloween-banner.jpg') center/cover no-repeat;">
     <div class="container">
       <h1 class="display-4">Halloween Assustador de Ofertas</h1>
       <p class="lead">Montagens incríveis, preços assustadores</p>
     </div>
   </header>
+
+
+  
 
 
   <nav class="bg-light py-3">
@@ -35,6 +40,8 @@
   <div class="container mt-5">
     <h3 class="text-center mb-4">Computadores em Destaque</h3>
     <div class="row">
+    
+      
 
       <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
         <div class="card bg-dark text-white">
@@ -102,8 +109,214 @@
         </div>
       </div>
 
+       <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer7.jpeg" alt="Descrição do PC Gamer 1">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Rápido</h5>
+            <p class="card-text">Precisão extrema para vitórias em jogos</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer8.jpeg" alt="Descrição do PC Gamer 2">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Elite</h5>
+            <p class="card-text">Desempenho rápido, conforto e durabilidade garantida</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer9.jpeg" alt="Descrição do PC Gamer 3">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Ultra</h5>
+            <p class="card-text">Controle total com sensor de alta precisão</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer10.jpeg" alt="Descrição do PC Gamer 4">
+          <div class="card-body">
+            <h5 class="card-title">PC para E-Sports</h5>
+            <p class="card-text">Iluminação RGB vibrante e design ergonômico</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer11.jpeg" alt="Descrição do PC Gamer 5">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Incrível</h5>
+            <p class="card-text">Resposta imediata para gamers profissionais exigentes</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer12.jpeg" alt="Descrição do PC Gamer 6">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Compacto</h5>
+            <p class="card-text">Desempenho de alto nível em um formato compacto!</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+       <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer13.jpeg" alt="Descrição do PC Gamer 1">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Rápido</h5>
+            <p class="card-text">Som imersivo para experiências de jogo intensas</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer14.png" alt="Descrição do PC Gamer 2">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Elite</h5>
+            <p class="card-text">Conforto prolongado com almofadas super macias</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer15.jpg" alt="Descrição do PC Gamer 3">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Ultra</h5>
+            <p class="card-text">Áudio cristalino com graves potentes incríveis</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer16.jpeg" alt="Descrição do PC Gamer 4">
+          <div class="card-body">
+            <h5 class="card-title">PC para E-Sports</h5>
+            <p class="card-text">Microfone com cancelamento de ruído avançado</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer17.png" alt="Descrição do PC Gamer 4">
+          <div class="card-body">
+            <h5 class="card-title">PC para E-Sports</h5>
+            <p class="card-text">Design moderno, leve e altamente resistente</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer18.png" alt="Descrição do PC Gamer 4">
+          <div class="card-body">
+            <h5 class="card-title">PC para E-Sports</h5>
+            <p class="card-text">Conectividade perfeita e desempenho profissional garantido</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer19.avif" alt="Descrição do PC Gamer 5">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Incrível</h5>
+            <p class="card-text">Alta taxa de atualização para jogabilidade fluida</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer20.jpg" alt="Descrição do PC Gamer 6">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Compacto</h5>
+            <p class="card-text">Cores vibrantes e contraste impressionante sempre</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+         <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer21.png" alt="Descrição do PC Gamer 6">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Compacto</h5>
+            <p class="card-text">Tela curva que amplia sua imersão total</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+
+  <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer22.jpg" alt="Descrição do PC Gamer 6">
+          <div class="card-body">
+            <h5 class="card-title">PC Gamer Compacto</h5>
+            <p class="card-text">Tempo de resposta rápido sem rastros</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+
+    <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer23.webp" alt="Descrição do PC Gamer 4">
+          <div class="card-body">
+            <h5 class="card-title">PC para E-Sports</h5>
+            <p class="card-text">Design ultrafino com bordas super reduzidas</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-4">
+        <div class="card bg-dark text-white">
+          <img src="img/pcgamer24.jpg" alt="Descrição do PC Gamer 4">
+          <div class="card-body">
+            <h5 class="card-title">PC para E-Sports</h5>
+            <p class="card-text">Imagem nítida, desempenho e estilo gamer</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+
     </div> 
   </div> 
+
+ 
 
   
 
